Bug#25146 Some warnings/errors not shown when using --show-warnings  - Additional patch to fix compiler warnings